# ClientEngine

./: .gitignore  CMakeLists.txt  OthelloClass.cpp  OthelloClass.h  OthelloGame.cpp  README.md
include/: OthelloClass.h  sio_socket.h
source/: OthelloClass.cpp  OthelloClient.cpp  OthelloClient.rs  OthelloGame.cpp  OthelloReplayer.cpp
src/: OthelloClass.cpp  OthelloClient.cpp  OthelloGame.cpp
